Fix spacing so blog text elements align

--- a/src/assets/styles/_page.scss
+++ b/src/assets/styles/_page.scss
@@ -314,7 +314,7 @@
   }
 
   .content--wrapper {
-    padding: 0 32px;
+    padding: 0;
 
     & .rt-asset {
       display: flex;
